syntax = "proto3";

package battleship_service;